// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer:dropdown-button 1`] = `
<div>
  <div
    class="cxd-DropDown  is-opened show"
  >
    <button
      class="cxd-Button cxd-Button--primary"
    >
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-caret"
          icon="caret"
        />
      </span>
    </button>
    <ul
      class="cxd-DropDown-menu"
    >
      <li
        class=""
      >
        <a
          class=""
        >
          <span>
            按钮
          </span>
        </a>
      </li>
      <li
        class=""
      >
        <a
          class=""
        >
          <span>
            按钮
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Renderer:dropdown-button 2`] = `
<div>
  <div
    class="cxd-DropDown  show"
  >
    <button
      class="cxd-Button cxd-Button--primary"
    >
      <span
        class="cxd-DropDown-caret"
      >
        <icon-mock
          classname="icon icon-caret"
          icon="caret"
        />
      </span>
    </button>
  </div>
</div>
`;
